<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/schedule_list_item_layout_parent_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_10dp"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/margin_10dp"
    card_view:cardCornerRadius="@dimen/margin_5dp"
    card_view:cardElevation="@dimen/margin_5dp">

    <LinearLayout
        android:id="@+id/schedule_list_item_layout_parent_vll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/schedule_list_item_layout_client_name_hll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/schedule_list_item_layout_client_name_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/client_name_title"
                android:textColor="@color/primary_color_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/schedule_list_item_layout_client_name_col_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_marginRight="@dimen/margin_5dp"
                android:text="@string/col"
                android:textColor="@color/primary_color_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/schedule_list_item_layout_client_name_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".65"
                android:textColor="@color/primary_color"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/schedule_list_item_layout_horizontal_bar_ev_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/accent" />

        <LinearLayout
            android:id="@+id/schedule_list_item_layout_start_date_time_hll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/schedule_list_item_layout_start_date_time_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/start_date_time_title"
                android:textColor="@color/primary_color_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/schedule_list_item_layout_cstart_date_time_col_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_marginRight="@dimen/margin_5dp"
                android:text="@string/col"
                android:textColor="@color/primary_color_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/schedule_list_item_layout_start_date_time_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".65"
                android:textColor="@color/primary_color"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/schedule_list_item_layout_horizontal_bar_ev_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/accent" />

        <LinearLayout
            android:id="@+id/schedule_list_item_layout_end_date_time_hll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/schedule_list_item_layout_end_date_time_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/end_date_time_title"
                android:textColor="@color/primary_color_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/schedule_list_item_layout_end_date_time_col_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_marginRight="@dimen/margin_5dp"
                android:text="@string/col"
                android:textColor="@color/primary_color_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/schedule_list_item_layout_end_date_time_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".65"
                android:textColor="@color/primary_color"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>